test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_expect_values/src/deprecated_attr.sw
library;

#[deprecated(note)]
pub struct NotOk { }